Fix layout shift

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,7 @@
 body {
     margin: 0;
     padding: 0;
+    flex: 1;
 }
 
 html {
