--- a/styles/loading.scss
+++ b/styles/loading.scss
@@ -77,4 +77,10 @@
             }
         }
     }
+
+    main {
+        &.loading {
+            visibility: hidden;
+        }
+    }
 }
